security UI work

--- a/spring-security/src/main/webapp/i18n/messages.properties
+++ b/spring-security/src/main/webapp/i18n/messages.properties
@@ -6,6 +6,12 @@ js.common.resourse.created=Successfully created resource
 js.common.resourse.exists=Resource already exists
 js.common.operation.error=Error to process operation
 
+# annonymous - common
+home.goto=Home
+# annonymous - the Login page
+login.username=Username
+login.password=Passwords
+
 admin.js.users.loadError=Error to load Organizations
 admin.js.users.notFound=Organization not found by name
 admin.js.users.promptEmail=Please enter email to find Organization by
