--- a/spring-security/src/main/webapp/i18n/messages.properties
+++ b/spring-security/src/main/webapp/i18n/messages.properties
@@ -8,9 +8,18 @@ js.common.operation.error=Error to process operation
 
 # annonymous - common
 home.goto=Home
+
 # annonymous - the Login page
 login.username=Username
 login.password=Passwords
+
+# annonymous - registration
+account.email=Email
+account.name=Username
+account.password=Password
+account.password.confirm=Password Confirm
+account.register=Register
+
 
 admin.js.users.loadError=Error to load Organizations
 admin.js.users.notFound=Organization not found by name
@@ -18,6 +27,7 @@ admin.js.users.promptEmail=Please enter email to find Organization by
 
 ui.login=Login
 ui.logout=Logout
+ui.register=Register
 ui.page=Page
 ui.prev=Prev
 ui.next=Next
