--- a/spring-security/src/main/webapp/i18n/messages.properties
+++ b/spring-security/src/main/webapp/i18n/messages.properties
@@ -14,8 +14,7 @@ login.username=Username
 login.password=Passwords
 
 # annonymous - registration
-account.email=Email
-account.name=Username
+account.username=Username
 account.password=Password
 account.password.confirm=Password Confirm
 account.register=Register
